--- a/wswsh.conf
+++ b/wswsh.conf
@@ -27,5 +27,7 @@ WSH_CSSFILE="../css/style.css"
 #WSH_COPY="1"
 
 HOME="../presentation/home.html"
+POSTS="../presentation/posts.html"
 ABOUT="../presentation/about.html"
+ROCKS="../presentation/rocks.html"
 SOURCE="https://github.com/IcaroPablo/IcaroPablo.github.io"
